--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				$email = $_POST['email'];
 				$message = $_POST['message'];
 				$addButton = $_POST['addbutton'];
-				$to = "jcc394@cornell.edu";//Substitute with Josh's email address
+				$to = "mickeyfriedman889@gmail.com";//Substitute with Josh's email address
 				$subject = "Website Contact US";
 				$txt = "You've received a message from".$name ."at ".$email.".  The message is listed below:\n".$message;
 				$headers = "From: admin@example.com" . "\r\n" ;//swap admin@example.com with admin@url url being our domain
