--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 								
 								<!-- Contact Form -->
 									<section>
-										<form method="post" action="uploads.php" enctype="multipart/form-data">
+										<form method="post" action="https://formspree.io/jcc394@cornell.edu" enctype="multipart/form-data">
 											<div class="row 50%">
 												<div class="6u 12u(mobile)">
 													<input type="text" name="name" id="contact-name" placeholder="Name" />
@@ -314,8 +314,8 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 											<div class="row">
 												<div class="12u">
 													<ul class="actions">
+																				<li><input type="file" name="uploadme" id="uploadme" /></li>
 														<li><input type="submit" name="addbutton" class="style1" value="Send" /></li> 
-							<li><input type="file" name="uploadme" id="uploadme" /></li>
 													</ul>
 
 												</div>
