--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 											<div class="row">
 												<div class="12u">
 													<ul class="actions">
-																				<li><input type="file" name="uploadme" id="uploadme" /></li>
+																				<li><input type="button" class="style1" value="Send Resume via Mail Client" onClick="window.location.href='mailto:test@example.com';"/></li> 
 														<li><input type="submit" name="addbutton" class="style1" value="Send" /></li> 
 													</ul>
 
@@ -328,48 +328,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 							<div class="6u 12u(mobile)">
 
 								<!-- Contact -->
-									<section class="feature-list small">
-										<div class="row">
-											<div class="6u 12u(mobile)">
-												<section>
-													<h3 class="icon fa-home">Mailing Address</h3>
-													<p>
-														als;dkjf;adsjf;ladsjf;ajsdf<br />
-														as;dlkfja;sdkfj;adsfj<br />
-														asd;fljasd;fjasd;fasldf
-													</p>
-												</section>
-											</div>
-											<div class="6u 12u(mobile)">
-												<section>
-													<h3 class="icon fa-comment">Social</h3>
-													<p>
-														<a href="#">@youremail.com</a><br />
-														<a href="#">linkedin.com/feelfreetosendtome</a><br />
-														<a href="#">facebook.com/haveaFacebookpageyet?</a>
-													</p>
-												</section>
-											</div>
-										</div>
-										<div class="row">
-											<div class="6u 12u(mobile)">
-												<section>
-													<h3 class="icon fa-envelope">Email</h3>
-													<p>
-														<a href="#">emailgoeshere</a>
-													</p>
-												</section>
-											</div>
-											<div class="6u 12u(mobile)">
-												<section>
-													<h3 class="icon fa-phone">Phone</h3>
-													<p>
-														a;sdlfkj;asdjf;as
-													</p>
-												</section>
-											</div>
-										</div>
-									</section>
+									
 
 							</div>
 						</div>
