--- a/index.html
+++ b/index.html
@@ -282,12 +282,12 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 
 			<!-- Footer -->
 				<div id="footer-wrapper" class="wrapper">
-					<div class="title">Contact Us</div>
+					<div class="title">Apply Now</div>
 					<div id="footer" class="container">
 						<header class="style1">
-							<h2>emaiil us your resume and etc </h2>
+							<h2>Tell us why you are a good fit for the group.</h2>
 							<p><strong>
-								;asldkfja;lsdkfj;laskdjf;lasdjg;lksg;khsdghsdf;lkhds;flkjasd;fj;asdkf<br>j;ldskfj;asdkfj;sakdfj;sdlakjf</strong>
+								We are excited to hear from you.</strong>
 							</p>
 						</header>
 						<hr />
@@ -297,7 +297,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 								
 								<!-- Contact Form -->
 									<section>
-										<form method="post" action="https://formspree.io/Trojanhedgefundgroup@gmail.com " enctype="multipart/form-data">
+										<form method="post" action="https://formspree.io/barach@USC.edu " enctype="multipart/form-data">
 											<div class="row 50%">
 												<div class="6u 12u(mobile)">
 													<input type="text" name="name" id="contact-name" placeholder="Name" />
