--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 											<div class="row">
 												<div class="12u">
 													<ul class="actions">
-																				<li><input type="button" class="style1" value="Send Resume via Mail Client" onClick="window.location.href='mailto:Trojanhedgefundgroup@gmail.com';"/></li> 
+																				<li><input type="button" class="style1" value="Send Resume via Mail Client" onClick="window.location.href='mailto:barach@usc.edu';"/></li> 
 														<li><input type="submit" name="addbutton" class="style1" value="Send" /></li> 
 													</ul>
 
