--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 											
 									<li><a href="#features">Our Board Members</a></li>
 									<li><a href="#highlights">Readings</a></li>
-									<li><a href="#footer-wrapper">Contact Us</a></li>
+									<li><a href="#footer-wrapper">Apply Now</a></li>
 									
 								</ul>
 							</nav>
@@ -315,7 +315,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 												<div class="12u">
 													<ul class="actions">
 																				<li><input type="button" class="style1" value="Send Resume via Mail Client" onClick="window.location.href='mailto:barach@usc.edu';"/></li> 
-														<li><input type="submit" name="addbutton" class="style1" value="Send" /></li> 
+														<li><input type="submit" name="addbutton" class="style1" value="Send Message" /></li> 
 													</ul>
 
 												</div>
