--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 						<br> 
 						<br>
 
-						<p class="style2"> Our Favorite Videos include (Josh help me fill this in real quick!)</p>
+						<p class="style2"> Learn how to pick stocks and more about the economic machine with some of our favorite videos posted below!</p>
 
 						<br>
 
