--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 							<section id="features">
 								<header class="style1">
-									<h2>Meet our managers and associates!</h2>
+									<h2>Meet our e-board</h2>
 									<h3>Together, we will prepare for careers in the hedgefund industry.</h3>
 								</header>
 								<div class="feature-list">
