--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 									</div>
 									<div class="row">
 										<div class="6u 12u(mobile)">
-											<section> <h3 /> Drew Cohen</h3><h5 >Vice President </h5><a href="#" class="image featured"><img src="images/daenerys.png" alt="" /></a>
+											<section> <h3 /> Drew Cohen</h3><h5 >Vice President </h5><a href="#" class="image featured"><img src="images/drew.jpg" alt="" /></a>
 									
 												<h4>Drew Cohen is currently pursuing his B.S. in Business Administration at the Marshall School of Business and his B.S. in Accounting at the Leventhal School of Accounting. While at USC, Drew has participated in the USC student government Philanthropy Fund, the Trojan Investing Society's Leader’s Program, and has helped conduct research studies at the Marshall School. He also is currently the exchequer for the Alpha Epsilon Pi fraternity. He has worked for a year and a half at Old West Investment Management, a value-investing firm, as a research equity analyst. This summer he interned in New York at Goldman Sachs in the Global Investment Research group as an equity analyst.</h4>
 											</section>
