--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 	<head>
-		<title>Trojan Hedgefund Group</title>
+		<title>Trojan Hedge Fund Group</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
