--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<div class="feature-list">
 									<div class="row">
 										<div class="6u 12u(mobile)">
-											<section> <h3 /> Josh Barach</h3><h5 >Founder and President</h5><a href="#" class="image featured"><img src="images/josh.png" alt="" /></a>
+											<section> <h3 /> Josh Barach</h3><h5 >Founder and President</h5><a href="#" class="image featured"><img src="images/Screen Shot 2016-09-06 at 2.09.28 AM.png" alt="" /></a>
 												<h4>Josh attends the University of Southern California, where he majors in philosophy, politics & law with a minor in finance. Josh was Captain of his high school tennis and basketball teams. He has interned at Gramercy Funds Management, the Charles Koch Institute, Bison Interests, and has participated in a program at Google. He was founder and CEO of Smoak Enterprises, was founder and President of the Wall Street Club, and has co-founded Grey Space Art and Celebria. In his free time, he enjoys conversing with intellectually curious people, and reading financial newspapers and books. He also likes to stay active, travel, and indulge in physical pleasures such as good food and wine.</h4>
 											</section>
 										</div>
