--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 												<h4>Yijing Zhao is a junior double majoring in Business Administration and International Relations. She is passionate about investing, startups, and the capital market. This past summer, she interned at Credit Suisse and with a superstar investor at a PE fund. In her spare time, Yijing loves reading, connecting with interesting people, modern arts, fashion, Pilates, and traveling the world to explore different cultures.</h4>
 											</section>
 										</div>
+		<div class="6u 12u(mobile)">
+											<section> <h3 /> Chase Johnson</h3><h5 >Co-Head of Corporate Outreach </h5><a href="#" class="image featured"><img src="images/yijing.jpg" alt="" /></a>
+											
+												<h4> Chase is a current Junior at USC pursuing a major in Business Administration. His father and grandfather are successful entrepreneurs and he hopes to follow their footsteps. His father is involved in private equity and the hedge fund industry. Chase is passionate about venture capital and international business in China. He speaks some mandarin.</h4>
+											</section>
+										</div>
 										
 									</div>
 								</div>
