--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									</div>
 									<div class="row">
 										<div class="6u 12u(mobile)">
-											<section> <h3 /> Mick Swarts</h3><h5 >Faculty Advisor</h5><a href="#" class="image featured"><img src="images/swartz.png" alt="" /></a>
+											<section> <h3 /> Mick Swartz</h3><h5 >Faculty Advisor</h5><a href="#" class="image featured"><img src="images/swartz.png" alt="" /></a>
 												
 												<h4> Mick Swartz graduated with a Phd in Finance from the University of Iowa in 1994. Mick has received many teaching awards for teaching corporate finance, investments, and derivatives (options and futures). Mick has over twenty presentations at finance conferences. He has been a member of many academic finance organizations in the US, including the Financial Management Association, American Finance Association, Midwest Finance Association, Eastern Finance Association, Multi-National Finance Association (charter member), South-Western Finance Association and other finance organizations. He has been a speaker for community groups, consulted state legislators concerning executive compensation and given advice on merger legislation, and taught in many countries (Australia,Ukraine, United Kingdom, Canada, Poland, Germany) and presented at finance conferences in many countries (Mexico, Greece, Great Britian, Germany, Poland and the United States). Mick has appeared on NBC and CNN, as well as many radio broadcasts, discussing topics such as: the financial crisis, executive pay, investment strategies, retirement planning, bail outs, derivatives, options, SWAPS and the general economic environment.</h4>
 											</section>
