--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Madison is an Economics Major going into his junior year at USC. After playing s
 											</section>
 										</div>
 		<div class="6u 12u(mobile)">
-											<section> <h3 /> Chase Johnson</h3><h5 >Co-Head of Corporate Outreach </h5><a href="#" class="image featured"><img src="images/yijing.jpg" alt="" /></a>
+											<section> <h3 /> Chase Johnson</h3><h5 >Co-Head of Corporate Outreach </h5><a href="#" class="image featured"><img src="images/14470683_10210726757627570_1153455353_n (1).jpg" alt="" /></a>
 											
 												<h4> Chase is a current Junior at USC pursuing a major in Business Administration. His father and grandfather are successful entrepreneurs and he hopes to follow their footsteps. His father is involved in private equity and the hedge fund industry. Chase is passionate about venture capital and international business in China. He speaks some mandarin.</h4>
 											</section>
