--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 					<div class="title">Introduction </div>
 					<section id="intro" class="container">
 						<p class="style2">
-							The Trojan Hedge Fund Group is a selective group of students who share a passion for financial markets and a strong interest in the hedge fund industry. The group meets weekly to discuss the previous week's events and potential future events/hypothetical investment plays. The group educates members on various investment strategies such as global macro, distressed, value, event driven, activist, etc
-						 
+							The Trojan Hedge Fund Group selects a group of students chosen out of a competitive applicant pool who share a passion for financial markets with a strong interest in the hedge fund industry. The Trojan Hedge Fund Group meets once a week to discuss macroeconomic trends and hypothetical investment plays. The group educates members on various investment strategies such as global macro, distressed debt, value investing, event driven investing, and activist investing.
+
 
 						</p>
 
